--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ models/keypoints_model.pth
 notebooks/.ipynb_checkpoints/Transformer_modelling-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/data_cleaning-checkpoint.ipynb
 gpt_old.py
+/venv/
