--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ notebooks/.ipynb_checkpoints/Transformer_modelling-checkpoint.ipynb
 notebooks/.ipynb_checkpoints/data_cleaning-checkpoint.ipynb
 gpt_old.py
 /venv/
+/.ipynb_checkpoints/
