--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@ data/Rogan_input.txt
 data/joe_rogan_episodes.txt
 models/rogan_model.pth
 models/keypoints_model.pth
-notebooks/.ipynb_checkpoints/Transformer_modelling-checkpoint.ipynb
-notebooks/.ipynb_checkpoints/data_cleaning-checkpoint.ipynb
+notebooks/.ipynb_checkpoints/
 gpt_old.py
 /venv/
 /.ipynb_checkpoints/
